# Graphs

./: CMakeLists.txt
include/: bridge_visitor.h  dfs.h  graph.h  parser.h  serializer.h  span_tree_visitor.h  sub_graph_dfs.h
input/: input.txt
output/: output.txt
src/: adj_list.cpp  adj_matrix.cpp  adjacency_matrix.cpp  dfs.cpp  graph.cpp  graph_gens.cpp  main.cpp  parser.cpp  printing_visitor.cpp  run  serializer.cpp
tests/: adjecency_list_tests.cpp  basic_funcs.cpp  basic_funcs_test.cpp  gen_tests.cpp  serializers_test.cpp
